add hover button and fix html

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                     </button>
                 </li>
             </ul>
+        </div>
     </section>
 
     <!-- MAIN -->
@@ -185,15 +186,15 @@
         </section>
 
         <!-- PS5 PRESENTAZIONE -->
-        <section class="PS5 mt-5">
+        <section class="PS5  mt-5 pb-4">
 
             <div class="container">
                 <div class="row">
-                <div class="col-12 text-center">
-                    <span class="cl-p fs-4">Play Has No Limits </span>
-                    <h1 class="title">Ecco la PlayStation 5</h1>
-                    <span class="text-secondary fs-4">Scopri nuove possibilità di gioco che non avresti mai immaginato</span>
-                </div>
+                    <div class="col-12 text-center">
+                        <span class="cl-p fs-4">Play Has No Limits </span>
+                        <h1 class="title">Ecco la PlayStation 5</h1>
+                        <span class="text-secondary fs-4">Scopri nuove possibilità di gioco che non avresti mai immaginato</span>
+                    </div>
                 </div>
             </div>
 
@@ -256,7 +257,7 @@
                             <div class="box-hover">
                                 <img src="./img/camera-thumb.jpg" 
                                 alt="webcam">
-                                <span class="d-none d-lg-block">Telecamera span<span>
+                                <span class="d-none d-lg-block">Telecamera </span>
                             </div>
                         </div>
                     </div>
@@ -289,6 +290,7 @@
                         </button>
                     </li>
                 </ul>
+            </div>
         </section>
 
         <!-- new-games -->
@@ -381,11 +383,12 @@
                         </div>
                         <span class="pt-3  fw-bold">Crash Bandicoot4: it's About Time</span>
                     </div>
+                </div>
             </div>
         </section>
 
         <!-- PS4 -->
-        <section class="PS4 sm-t">
+        <section class="PS4 sm-t mb-5">
 
             <div class="container">
                 <div class="row justify-content-center">
@@ -498,7 +501,7 @@
         </section>
 
         <!-- SALE -->
-        <section class="sale sm-t   ">
+        <section class="sale sm-t ">
             <div class="container">
                 <div class="row text-center">
                     <div class="col-12  ">
@@ -604,8 +607,8 @@
 
                 <li class="col-12  col-lg-6 pt-5">
                     <div class="container p-0">
-                        <ul class="row">
-                            <div class="col-12 col-md-4">
+                        <div class="row">
+                            <ul class="col-12 col-md-4">
                                 <li>
                                     <a href="#">Link footer n</a>
                                 </li>
@@ -618,9 +621,9 @@
                                 <li>
                                     <a href="#">Link footer n</a>
                                 </li>
-                            </div>
+                            </ul>
 
-                            <div class="col-12 col-md-4">
+                            <ul class="col-12 col-md-4">
                                 <li>
                                     <a href="#">Link footer n</a>
                                 </li>
@@ -639,9 +642,9 @@
                                 <li>
                                     <a href="#">Link footer n</a>
                                 </li>
-                            </div>
+                            </ul>
 
-                            <div class="col-12 col-md-4">
+                            <ul class="col-12 col-md-4">
                                 <li>
                                     <a href="#">Link footer n</a>
                                 </li>
@@ -654,8 +657,8 @@
                                 <li>
                                     <a href="#">Link footer n</a>
                                 </li>
-                            </div>
-                        </ul>
+                            </ul>
+                        </div>
                     </div>
                 </li>
             </ul>
