--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./bonus/bonus.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Playstation</title>
@@ -215,7 +216,7 @@
             </div>
 
             <!-- gadegt -->
-            <div class="container mb-5">
+            <div class="container container-bonus mb-5">
                 <div class="row offset-lg-1">
                     <div class="col-4 col-lg-2">
                         <div class="box-ps5 pd-r">
