--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </div>
 
             <!-- ifo ps5-section -->
-            <div class="container">
+            <div class="container mb-5">
                 <div class="row">
                     <div class="col-12 col-md-5 info-ps5 mt-5 align-self-center">
                         <h1 class="title">Console PlayStation 5</h1>
