--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-12">
-                                        <h1 class="title">
+                                        <h1 class="title-main">
                                             PlayStation 4
                                         </h1>
                                         <h3 class="text-secondary">
@@ -434,7 +434,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-12">
-                                        <h1 class="title">
+                                        <h1 class="title-main">
                                             PlayStation 4
                                         </h1>
                                         <h3 class="text-secondary">
@@ -456,7 +456,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-12">
-                                        <h1 class="title">
+                                        <h1 class="title-main">
                                             PlayStation 4
                                         </h1>
                                         <h3 class="text-secondary">
