add fix a navbar

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </li>
                   
                     <li class="nav-item">
-                        <a class="nav-link nav-a-stile ">Servizi
+                        <a class="nav-link nav-a-stile" href="#">Servizi
                             <span class="container-arrow">
                                 <img class="arrow-icon align-self-center" src="./img/chevron-down-solid.svg" alt="">
                                 <img class=" arrow-icon2 align-self-center" src="./img/chevron-down-solid-hover.svg" alt="">
@@ -66,7 +66,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link nav-a-stile">Novitá
+                        <a class="nav-link nav-a-stile" href="#">Novitá
                             <span class="container-arrow">
                                 <img class="arrow-icon align-self-center" src="./img/chevron-down-solid.svg" alt="">
                                 <img class=" arrow-icon2 align-self-center" src="./img/chevron-down-solid-hover.svg" alt="">
@@ -75,7 +75,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link nav-a-stile">Fai acquisti
+                        <a class="nav-link nav-a-stile" href="#">Fai acquisti
                             <span class="container-arrow">
                                 <img class="arrow-icon align-self-center" src="./img/chevron-down-solid.svg" alt="">
                                 <img class=" arrow-icon2 align-self-center" src="./img/chevron-down-solid-hover.svg" alt="">
@@ -84,7 +84,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link nav-a-stile">Supporto
+                        <a class="nav-link nav-a-stile" href="#">Supporto
                             <span class="container-arrow">
                                 <img class="arrow-icon align-self-center" src="./img/chevron-down-solid.svg" alt="">
                                 <img class=" arrow-icon2 align-self-center" src="./img/chevron-down-solid-hover.svg" alt="">
